refactor: update Swagger documentation and DTOs for Offers, Wishes, and Wishlists to improve data types, method naming, and response structures
